Fixed scrollbar and link

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
-html {
-  height: 100%;
-  max-width: 100%;
-}
-
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
+html, body {margin: 0; height: 100%; overflow: hidden}
 
 body {
   font-family: 'Open Sans', sans-serif;
